assets/less/site.less
/* ... */
#wrap {
  &.wrap-navbar-fixed-top {
    padding-top: 40px;
    @media (max-width: 979px) {
      padding-top: 0;
    }
  }

  &.wrap-navbar-top {
    padding-top: 0;
  }
}

.jumbotron {
  background: @octoDark;
  border-bottom: 1px solid @octoDark;

  padding: 40px 0 40px;
  .logo-content {
    @media (min-width: 768px) and (max-width: 979px) {
      padding-top: 25px;
    }
    @media (max-width: 767px) {
      padding-top: 20px;
    }
  }

  text-shadow: 2px 2px 2px @grayDark;

  #gradient > .radial( lighten(@octoLight, 3%), @octoDark);
  .responsive-full-width;

  &, h1 {
    color: @white;
    border-bottom: none;
  }

  h1 {
    font-size: 80px;
    @media (max-width: 450px) {
      font-size: 60px;
    }

    letter-spacing: -2px;
    line-height: 1;
  }
  p {
    font-size: 25px;
    @media (max-width: 450px) {
      font-size: 18px;
    }

    margin-top: 15px;
    margin-bottom: 30px;
    line-height: 1.3;
  }
  ul {
    margin-left: 50px;
    li {
      &.icon-large:before {
        text-indent: -2em;
        vertical-align: baseline;
      }

      font-size: 15px;
      line-height: 30px;
      @media (max-width: 450px) {
        font-size: 13px;
        line-height: 26px;
      }
      text-shadow: 1px 1px 1px @grayDark;
    }
  }

  .btn-large {
    font-family: @serifFontFamily;
    font-weight: bold;
    font-size: 18px;
    padding: 13px 23px 13px 22px;
    margin-right: 10px;
    text-align: left;
  }

  .hero-content, .logo-content {
    text-align: center;
  }

  .shameless-self-promotion {
    font-size: 12px;
    margin-top: 15px;
    color: mix(@white, @octoLight, 50%);
    text-shadow: none;
  }

  .pageheader {
    h1 {
      font-size: 60px;
    }
  }
}

.page-header {
  background: @octoDark;
  border-bottom: none;
  margin: 0;

  padding: 30px 0 30px;
  .responsive-full-width;

  text-align: center;

  #gradient > .radial( @octoLight, @octoDark);

  &, h1 { color: @white; }

  h1 {
    font-size: 60px;
    line-height: 1;
    border: none;
  }
  p {
    margin-top: 15px;
    margin-bottom: 30px;
    font-size: 30px;
    line-height: 1.3;
  }
  text-shadow: 2px 2px 2px @grayDark;
}

#social-buttons {
  padding: 22px 0;
  text-align: center;
  background-color: #f5f5f5;
  border-top: 1px solid #fff;
  border-bottom: 1px solid #ddd;

  .watch, .fork, .flattr, .gplus, .twitter-follow, .twitter-tweet {
    margin-right: 20px;
  }

  .facebook {
    .fb_iframe_widget {
      top: -5px;
    }
  }
}

#shortpromo {
  padding: 2em 1em;
  @media (max-width: 767px) {
    padding-bottom: 0;
  }

  background-color: #f5f5f5;
  border-top: 1px solid #fff;
  border-bottom: 1px solid #ddd;
  .responsive-full-width;

  text-align: center;

  >.container:last-child {
    @media (max-width: 767px) {
      margin-bottom: 3em;
    }
  }

  .promobox {
    @media (max-width: 767px) {
      margin-bottom: 3em;
    }

    h1 {
      color: @octoLight;

      i {
        font-size: 1.2em;
      }
    }
  }

  .actionbox {
    margin-top: 2em;
    @media (max-width: 767px) {
      margin-top: 3em;
    }

    a.donatelink {
      display: block;
      margin-bottom: 1em;
      font-weight: bold;
    }
  }

  .sponsorbox {
    text-align: center;
    margin-top: 2em;
    @media (max-width: 767px) {
      margin-top: 0;
    }

    .sponsorrow {
      .sponsor {
        display: inline-block;
        margin: @sponsormargin;
        width: @sponsorwidth;
        max-height: @sponsorheight;

        img {
          max-width: @sponsorwidth;
          max-height: @sponsorheight;
        }
      }
    }

  }

  .adbox {
    #carbonads {
      display: inline-block;

      margin-top: 2em;
      @media (max-width: 767px) {
        margin-top: 3em;
      }
      padding: 0;

      width: @adwidth;
      max-height: @adheight;

      .carbon-img {
        float: left;
        margin-right: @admargin;
      }

      .carbon-text {
        display: block;
        float: left;
        max-width: 130px; // @adwidth - @admargin - 130
        text-align: left;
      }

      .carbon-poweredby {
        display: block;
        position: absolute;
        right: 0;
        bottom: 0;
      }
    }
  }
}

#features {
  padding: 3em 1em 3em;

  .promo {
    h3 {
      text-align: center;
      margin-bottom: 1em;
    }

    margin-bottom: 2em;

    line-height: 2em;
    li {
      line-height: 2em;
    }
  }

  .promo-screenshots {
    @media (max-width: 767px) {
      margin-top: 2em;
    }
  }
}

.well.well-transparent {
  background-color: transparent;
}

#wrap {
  min-height: 100%;
}
/* ... */

